# minecraft-remote-monitoring

./: .gitignore  AUDIT.md  CLAUDE.md  DESIGN-0.5.0.md  DESIGN-BRAIN.md  LICENSE  Makefile  PKGBUILD  README.md  TODO.md  pyproject.toml  update.sh
.github/workflows/: android.yml  ci.yml  release.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/carborioland/mcctl/: MainActivity.kt  McctlApp.kt
android/app/src/main/kotlin/com/carborioland/mcctl/assets/: AssetSyncManager.kt
android/app/src/main/kotlin/com/carborioland/mcctl/data/: ConnectionProfile.kt  ProfileStore.kt  PushStore.kt  ServerRepository.kt
android/app/src/main/kotlin/com/carborioland/mcctl/data/security/: SecureStore.kt
android/app/src/main/kotlin/com/carborioland/mcctl/di/: AppContainer.kt
android/app/src/main/kotlin/com/carborioland/mcctl/push/: McctlNotifications.kt  NtfyPoller.kt  PushScheduler.kt
android/app/src/main/kotlin/com/carborioland/mcctl/session/: SessionService.kt
android/app/src/main/kotlin/com/carborioland/mcctl/ui/: ActionRunner.kt  Biometric.kt  IconCache.kt  Locals.kt  RecipeStore.kt  RpcResource.kt  Vm.kt
android/app/src/main/kotlin/com/carborioland/mcctl/ui/components/: Async.kt  Bevel.kt  ConfirmDialog.kt  Fields.kt  HoldCraftButton.kt  HostKeyDialog.kt  ItemIcon.kt  ItemSlot.kt  MetricChart.kt  RecipeView.kt  Widgets.kt
android/app/src/main/kotlin/com/carborioland/mcctl/ui/nav/: Destinations.kt  McctlAppRoot.kt
android/app/src/main/kotlin/com/carborioland/mcctl/ui/screens/: AiScreen.kt  BackupsScreen.kt  ConnectScreen.kt  ConsoleScreen.kt  CraftingScreen.kt  CrashesScreen.kt  DashboardScreen.kt  EventsScreen.kt  (+11 more)
android/app/src/main/kotlin/com/carborioland/mcctl/util/: Format.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/core/: build.gradle.kts
android/gradle/: libs.versions.toml
completions/: mcctl.fish
data/: io.github.lonaivdev_cell.mcctl.desktop
src/mcctl/: __init__.py  agent.py  assets.py  backup.py  charts.py  cli.py  config.py  console.py  crafting.py  dash.py  doctor.py  events.py  gui.py  gui_app.py  inspector.py  llm.py  logs.py  metrics.py  modconfig.py  mods.py  players.py  postmortem.py  prometheus.py  props.py  rcon.py  server.py  spark.py  state.py  tracer.py  transport.py  util.py  watch.py  watchdog.py
src/mcctl/units/: mcctl-autosave.service  mcctl-autosave.timer  mcctl-metrics.service  mcctl-metrics.timer
systemd/: mcctl-backup.service  mcctl-backup.timer  mcctl-watchdog.service
tests/: conftest.py  test_agent.py  test_agent_schema.py  test_assets.py  test_backup.py  test_charts.py  test_cli.py  test_config.py  test_console.py  test_crafting.py  test_doctor.py  test_events.py  test_gui.py  test_inspector.py  test_integration.py  test_llm.py  test_logs.py  test_metrics.py  test_modconfig.py  test_mods.py  test_postmortem.py  test_prometheus.py  test_props.py  test_rcon.py  test_server.py  test_spark.py  test_tracer.py  test_transport.py  test_util.py  test_watchdog.py
tests/golden/: agent_schema_v1.json
(+17 files in other folders)
