[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcctl"
version = "0.6.0"
description = "Remote control & monitoring for a modded Minecraft server over SSH (Arch Linux client)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CarborioLand" }]
keywords = ["minecraft", "ssh", "server", "monitoring", "neoforge", "spark"]
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
ai = ["anthropic>=0.69"]

[project.scripts]
mcctl = "mcctl.cli:main"

[project.gui-scripts]
mcctl-gui = "mcctl.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcctl = ["units/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: spawns a real local tmux session with a fake server (requires tmux)",
]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
